--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codesyntax/ionic-react-photo-viewer": "^1.13.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -14,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-slideshow-image": "^4.1.1",
+    "react-slideshow-image": "^4.2.0",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
